removed unnecessary stuff

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>Very insightful and interesting talk by our very own Jt Secretary, the famous Satya Prakash sir.</p>
-                                <h4>Ted Talk by Satya Prakash Sir</h4>
+                                <p>We will finish with open source contributing round where everyone will work on their first pull requests together.</p>
+                                <h4>Hands on open source contributing</h4>
                                 <span></span>
                             </div>
                         </div>
@@ -304,8 +304,8 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="contact-info">
                         <h4>More Info</h4>
                         <ul>
-                            <li><em>Phone</em>: 090-090-0320</li>
-                            <li><em>Email</em>: tk@company.co</li>
+                            <li><em>Phone</em>: 7057782437</li>
+                            <li><em>Email</em>: ossclub@aitpune.edu.in</li>
                         </ul>
                     </div>
                 </div>
@@ -313,12 +313,7 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="connect-us">
                         <h4>Get Social with us</h4>
                         <ul>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google"></i></a></li>
-                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        </ul>
+                            <li><a href="https://www.facebook.com/groups/ossclubait/"><i class="fa fa-facebook"></i></a></li>
                     </div>
                 </div>
             </div>
