--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ http://www.templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="about">Agenda</a></li>
-                        <li><a href="#" class="scroll-link" data-id="portfolio">About</a></li>
+                        <li><a href="#" class="scroll-link" data-id="about">About</a></li>
+                        <li><a href="#" class="scroll-link" data-id="portfolio">Agenda</a></li>
                         <li><a href="#" class="scroll-link" data-id="blog">Rules</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
                     </ul>
@@ -74,7 +74,7 @@ http://www.templatemo.com/tm-506-tinker
     <section id="about" class="page-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_01.png" alt="">
@@ -84,7 +84,7 @@ http://www.templatemo.com/tm-506-tinker
                         <p>The OSS club of Army Insitute of Technology will conducting the hacktoberfest on it's compus.</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_02.png" alt="">
@@ -94,7 +94,7 @@ http://www.templatemo.com/tm-506-tinker
                         <p>The event will be held on 6th of October (Sunday) from 9:00 AM to 11:00 AM</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
@@ -107,32 +107,33 @@ http://www.templatemo.com/tm-506-tinker
                         </div>-->
                     </div>
                 </div>
-               <!-- <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
-                            <img src="img/service_icon_04.png" alt="">
+                            <img src="img/t-shirt-black-silhouette.png" alt="">
                         </div>
-                        <h4>One-Click Setup</h4>
+                        <h4>Free T-Shirt</h4>
                         <div class="line-dec"></div>
-                        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent viverra, nunc et mollis fermentum.</p>
-                        <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                        </div>
+                        <p>If you open five Pull Requests in public GitHub repos between October 1 and October 31, you’ll win a free, limited edition Hacktoberfest T-shirt and some swag!
+                        </p>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
 
     <section id="portfolio">
 
-                    <div class="col-md-4 col-sm-12">
+                    <div class="col-md-12 col-sm-12">
                         <div class="section-heading">
                             <h4>What's Hacktoberfest?</h4>
                             <div class="line-dec"></div>
-                            <p>Hacktoberfest — brought to you by DigitalOcean in partnership with DEV — is a month-long celebration of open source software. Maintainers are invited to guide would-be contributors towards issues that will help move the project forward, and contributors get the opportunity to give back to both projects they like and others they've just discovered. No contribution is too small — bug fixes and documentation updates are valid ways of participating.
-
-                                    Can't make it to this event? Hacktoberfest is virtual and open to participants from around the globe. Sign up to participate today at https://hacktoberfest.digitalocean.com.</p>
+                            <p>Hacktoberfest — brought to you by DigitalOcean in partnership with DEV — is a month-long celebration of open source software.<br>
+                                    Can't make it to this event? Hacktoberfest is virtual and open to participants from around the globe. Sign up to participate today at https://hacktoberfest.digitalocean.com.
+                            <br><br><h4>Agenda :-</h4>
+                            <br>
+                            <p>Bring your laptop and join us to code in a relaxed and open setting with other developers. If you're new to coding we'll have mentors on hand to help guide you.</p>
+                            </p>
                             
     </section>
 
@@ -144,21 +145,21 @@ http://www.templatemo.com/tm-506-tinker
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>Open-source software (OSS) is a type of computer software in which source code is released under a license in which the copyright holder grants users the rights to study, change, and distribute the software to anyone and for any purpose.Open-source software may be developed in a collaborative public manner. Open-source software is a prominent example of open collaboration.</p>
+                                <p class="descColor">Open-source software (OSS) is a type of computer software in which source code is released under a license in which the copyright holder grants users the rights to study, change, and distribute the software to anyone and for any purpose.Open-source software may be developed in a collaborative public manner. Open-source software is a prominent example of open collaboration.</p>
                                 <h4>Introduction to open source</h4>
                                 <span></span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>How to start contributing to open source software on GitHub</p>
+                                <p class="descColor">How to start contributing to open source software on GitHub</p>
                                 <h4>How to start contributing</h4>
                                 <span></span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>We will finish with open source contributing round where everyone will work on their first pull requests together.</p>
+                                <p class="descColor">We will finish with open source contributing round where everyone will work on their first pull requests together.</p>
                                 <h4>Hands on open source contributing</h4>
                                 <span></span>
                             </div>
@@ -192,7 +193,7 @@ http://www.templatemo.com/tm-506-tinker
                                 <img src="img/blog_item_01.jpg" alt="">
                                 <div class="text-content">
                                     <h4>Rules</h4>
-                                    <p>First, sign up on the Hacktoberfest site at https://hacktoberfest.digitalocean.com. To qualify for the official limited edition Hacktoberfest shirt, you must register and make four pull requests between October 1-31. Pull requests can be to any public repo on GitHub, not just the ones with issues labeled Hacktoberfest. If a maintainer reports your pull request as spam or behavior not in line with the project’s code of conduct, you will be ineligible to participate.</p>
+                                    <p>First, sign up on the Hacktoberfest site at <a href="https://hacktoberfest.digitalocean.com">https://hacktoberfest.digitalocean.com</a>. To qualify for the official limited edition Hacktoberfest shirt, you must register and make four pull requests between October 1-31. Pull requests can be to any public repo on GitHub, not just the ones with issues labeled Hacktoberfest. If a maintainer reports your pull request as spam or behavior not in line with the project’s code of conduct, you will be ineligible to participate.</p>
                                 </div>
                             </div>
                             <div id="tab2">
