--- a/index.html
+++ b/index.html
@@ -63,58 +63,62 @@ http://www.templatemo.com/tm-506-tinker
         <div class="container">
             <div class="text-content">
 
-                <div class="gradient-button gradient-button-2 btn-size-ad" style="width: 50%;margin-left: 66%;margin-top: 10%;">
-                    <a href="https://hacktoberfest.digitalocean.com/profile" style="color:rgb(0, 0, 0);">Let's Start</a>
+                <div class="gradient-button gradient-button-3 btn-size-ad" style="width: 50%;margin-left: 60%;margin-top: 10%;">
+                    <a href="https://hacktoberfest.digitalocean.com/profile" style="color:rgb(0, 0, 0);font-weight: bold;">Let's Start</a>
                 </div>
             </div>
         </div>
     </div>
-
-
     <section id="about" class="page-section">
+<center>
+    <h2 style="color: white;margin-top: -130px;font-weight: bold;">Schedule</h2><br><br>
+</center>
+        
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_01.png" alt="">
                         </div>
                         <h4>Location</h4>
                         <div class="line-dec"></div>
-                        <p>The OSS club of Army Insitute of Technology will conducting the hacktoberfest at Manekshaw Hall on it's campus.</p>
+                        <p style="font-size: 20px;">The OSS club of Army Insitute of Technology will conducting the hacktoberfest at Manekshaw Hall on it's campus.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_02.png" alt="">
                         </div>
                         <h4>Time</h4>
                         <div class="line-dec"></div>
-                        <p>The event will be held on 6th of October (Sunday) from 8:30 AM to 9:30 AM</p>
+                        <p style="font-size: 20px;">The event will be held on 6th of October (Sunday) from 8:30 AM to 9:30 AM</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
                         </div>
                         <h4>Events</h4>
                         <div class="line-dec"></div>
-                        <p>The event will consist of talks on open source software and how to start contributing to open source.</p>
+                        <p style="font-size: 20px;">The event will consist of talks on open source software and how to start contributing to open source.</p>
                         <!---<div class="primary-blue-button">
                             <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
                         </div>-->
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/t-shirt-black-silhouette.png" alt="">
                         </div>
                         <h4>Free T-Shirt</h4>
                         <div class="line-dec"></div>
-                        <p>If you open five Pull Requests in public GitHub repos between October 1 and October 31, you’ll win a free, limited edition Hacktoberfest T-shirt and some swag!
+                        <p style="font-size: 20px;">If you open five Pull Requests in public GitHub repos between October 1 and October 31, you’ll win a free, limited edition Hacktoberfest T-shirt and some swag!
                         </p>
                     </div>
                 </div>
@@ -124,18 +128,19 @@ http://www.templatemo.com/tm-506-tinker
 
     <section id="portfolio" style="background: #152346;">
         <div class="container">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12" style="letter-spacing: 2px;word-spacing: 5px;">
                         <div class="section-heading" style="margin-bottom:0">
-                            <h4 style="color:blue; font-family: monospace">What's Hacktoberfest?</h4>
+                            <h4 style="color:rgb(0, 225, 255); font-family: monospace;font-size: 45px;">What's Hacktoberfest?</h4>
                             <div class="line-dec"></div>
-                            <p>Hacktoberfest — brought to you by DigitalOcean in partnership with DEV — is a month-long celebration of open source software.<br>
-                                    Can't make it to this event? Hacktoberfest is virtual and open to participants from around the globe. Sign up to participate today at https://hacktoberfest.digitalocean.com.
-                            <br><br><h4 style="color:blue; font-family: monospace">Agenda :-</h4>
+                            <p style="font-family: monospace;font-size:25px;letter-spacing: 0px;word-spacing: 5px;">Hacktoberfest — brought to you by DigitalOcean in partnership with DEV — is a month-long celebration of open source software.<br>
+                                    Can't make it to this event? Hacktoberfest is virtual and open to participants from around the globe.<br><br> Sign up to participate today at https://hacktoberfest.digitalocean.com.
+                            <br><br><h4 style="color:rgb(0, 255, 255); font-family: monospace;font-size: 45px;">Agenda :-</h4>
                             <br>
-                            <p>Bring your laptop and join us to code in a relaxed and open setting with other developers. If you're new to coding we'll have mentors on hand to help guide you.</p>
+                            <p style="font-family: monospace;font-size:25px;letter-spacing: 0px;word-spacing: 5px;">Bring your laptop and join us to code in a relaxed and open setting with other developers. If you're new to coding we'll have mentors on hand to help guide you.</p>
                             </p>
                         </div>
                         <div class="container" >
+                            <center><h1 style="color: white;">Organised at</h1> </center>
                             <img src="img/ait.jpeg">
                         </div>
                     </div>
@@ -143,7 +148,7 @@ http://www.templatemo.com/tm-506-tinker
     </section>
 
 
-    <section id="testimonial">developers
+    <section id="testimonial" style="color: white;">Our Mission
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
