--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_01.png" alt="">
                         </div>
-                        <h4>Location</h4>
+                        <h3 style="color: white;font-weight: bold;">Location</h3>
                         <div class="line-dec"></div>
                         <p style="font-size: 20px;">The OSS club of Army Insitute of Technology will conducting the hacktoberfest at Manekshaw Hall on it's campus.</p>
                     </div>
@@ -91,19 +91,19 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/service_icon_02.png" alt="">
                         </div>
-                        <h4>Time</h4>
+                        <h3 style="color: white;font-weight: bold;">Time</h3>
                         <div class="line-dec"></div>
                         <p style="font-size: 20px;">The event will be held on 6th of October (Sunday) from 8:30 AM to 9:30 AM</p>
                     </div>
                 </div>
-            </div>
+            </div><br><br>
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <div class="icon">
                             <img src="img/service_icon_03.png" alt="">
                         </div>
-                        <h4>Events</h4>
+                        <h3 style="color: white;font-weight: bold;">Events</h3>
                         <div class="line-dec"></div>
                         <p style="font-size: 20px;">The event will consist of talks on open source software and how to start contributing to open source.</p>
                         <!---<div class="primary-blue-button">
@@ -116,7 +116,7 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="icon">
                             <img src="img/t-shirt-black-silhouette.png" alt="">
                         </div>
-                        <h4>Free T-Shirt</h4>
+                        <h3 style="color: white;font-weight: bold;">Free T-Shirt</h3>
                         <div class="line-dec"></div>
                         <p style="font-size: 20px;">If you open five Pull Requests in public GitHub repos between October 1 and October 31, you’ll win a free, limited edition Hacktoberfest T-shirt and some swag!
                         </p>
@@ -139,8 +139,8 @@ http://www.templatemo.com/tm-506-tinker
                             <p style="font-family: monospace;font-size:25px;letter-spacing: 0px;word-spacing: 5px;">Bring your laptop and join us to code in a relaxed and open setting with other developers. If you're new to coding we'll have mentors on hand to help guide you.</p>
                             </p>
                         </div>
-                        <div class="container" >
-                            <center><h1 style="color: white;">Organised at</h1> </center>
+                        <div class="container" style="margin-top:-150px;">
+                            <center><h1 style="color: rgb(238, 224, 224);font-weight: bold;">Organised at</h1> </center>
                             <img src="img/ait.jpeg">
                         </div>
                     </div>
