--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ http://www.templatemo.com/tm-506-tinker
             <div class="text-content">
 
                 <div class="gradient-button gradient-button-2 btn-size-ad" style="width: 50%;margin-left: 66%;margin-top: 10%;">
-                    <a href="#" class="scroll-link" data-id="about" style="color:rgb(0, 0, 0);">Let's Start</a>
+                    <a href="https://hacktoberfest.digitalocean.com/profile" style="color:rgb(0, 0, 0);">Let's Start</a>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Location</h4>
                         <div class="line-dec"></div>
-                        <p>The OSS club of Army Insitute of Technology will conducting the hacktoberfest on it's compus.</p>
+                        <p>The OSS club of Army Insitute of Technology will conducting the hacktoberfest at Manekshaw Hall on it's campus.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -91,7 +91,7 @@ http://www.templatemo.com/tm-506-tinker
                         </div>
                         <h4>Time</h4>
                         <div class="line-dec"></div>
-                        <p>The event will be held on 6th of October (Sunday) from 9:00 AM to 11:00 AM</p>
+                        <p>The event will be held on 6th of October (Sunday) from 8:30 AM to 9:30 AM</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -178,10 +178,10 @@ http://www.templatemo.com/tm-506-tinker
                         <div class="section-heading">
                             <h4>Event details</h4>
                             <div class="line-dec"></div>
-                            <p>Rules, prizes and event code of conduct is displayed here</p>
+                            <p>Event details are displayed here</p>
                             <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                                <li><a href="#tab1" class="active">Rules</a></li>
-                                <li><a href="#tab2">Code of conduct</a></li>
+                                <li><a href="#tab1" class="active">Code of Conduct</a></li>
+                                <!--<li><a href="#tab1">Code of conduct</a></li>-->
                                 <!--<li><a href="#tab3">Sed vel elit et lorem</a></li>
                                 <li><a href="#tab4">Vivamus purus neque</a></li>-->
                             </ul>
@@ -189,14 +189,14 @@ http://www.templatemo.com/tm-506-tinker
                     </div>
                     <div class="col-md-8">
                         <section id="first-tab-group" class="tabgroup">
-                            <div id="tab1">
+                        <!--<div id="tab1">
                                 <img src="img/blog_item_01.jpg" alt="">
                                 <div class="text-content">
                                     <h4>Rules</h4>
                                     <p>First, sign up on the Hacktoberfest site at <a href="https://hacktoberfest.digitalocean.com">https://hacktoberfest.digitalocean.com</a>. To qualify for the official limited edition Hacktoberfest shirt, you must register and make four pull requests between October 1-31. Pull requests can be to any public repo on GitHub, not just the ones with issues labeled Hacktoberfest. If a maintainer reports your pull request as spam or behavior not in line with the project’s code of conduct, you will be ineligible to participate.</p>
                                 </div>
-                            </div>
-                            <div id="tab2">
+                        </div>-->
+                            <div id="tab1">
                                 <img src="img/blog_item_02.jpg" alt="">
                                 <div class="text-content">
                                     <h4>Code of conduct</h4>
@@ -296,7 +296,7 @@ http://www.templatemo.com/tm-506-tinker
                     <div class="location">
                         <h4>Location</h4>
                         <ul>
-                            <li>BCJ Hall,<br>Army Insitute Of Technology</li>
+                            <li>Manekshaw Hall,<br>Army Insitute Of Technology</li>
                             <li>Alandi Rd, <br>Pune 411015</li>
                         </ul>
                     </div>
