--- a/index.html
+++ b/index.html
@@ -122,23 +122,28 @@ http://www.templatemo.com/tm-506-tinker
         </div>
     </section>
 
-    <section id="portfolio">
-
+    <section id="portfolio" style="background: #152346;">
+        <div class="container">
                     <div class="col-md-12 col-sm-12">
-                        <div class="section-heading">
-                            <h4>What's Hacktoberfest?</h4>
+                        <div class="section-heading" style="margin-bottom:0">
+                            <h4 style="color:blue; font-family: monospace">What's Hacktoberfest?</h4>
                             <div class="line-dec"></div>
                             <p>Hacktoberfest — brought to you by DigitalOcean in partnership with DEV — is a month-long celebration of open source software.<br>
                                     Can't make it to this event? Hacktoberfest is virtual and open to participants from around the globe. Sign up to participate today at https://hacktoberfest.digitalocean.com.
-                            <br><br><h4>Agenda :-</h4>
+                            <br><br><h4 style="color:blue; font-family: monospace">Agenda :-</h4>
                             <br>
                             <p>Bring your laptop and join us to code in a relaxed and open setting with other developers. If you're new to coding we'll have mentors on hand to help guide you.</p>
                             </p>
-                            
+                        </div>
+                        <div class="container" >
+                            <img src="img/ait.jpeg">
+                        </div>
+                    </div>
+        </div>
     </section>
 
 
-    <section id="testimonial">
+    <section id="testimonial">developers
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
