--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,7 +7,7 @@
 Tinker Template
 http://www.templatemo.com/tm-506-tinker
 -->
-        <title>Hacktoberfest - AIT Pune</title>
+        <title>Hacktoberfest - Nishu want to learn</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
